# isanagi-proto

./: .gitignore  README.md  pyproject.toml
doc/: isana-build.md  okojo-elfeditor.md
isana/: abi.py  compiler.py  isa.py  semantic.py  test.py  uarch.py
isana/model/cpux0/python/: abi.py  compiler.py  datatype.py  instruction.py  isa.py  register.py  subsets.py  uarch.py
isana/model/riscv/python/: compiler.py  datatype.py  instruction.py  instructionC.py  instructionI.py  instructionType.py  isa.py  register.py
isana/model/riscvx/python/: abi.py  compiler.py  instructionAlias.py  instructionB.py  instructionC.py  instructionD.py  instructionF.py  instructionI.py  instructionM.py  instructionQ.py  instructionType.py  instructionZawrs.py  instructionZicsr.py  instructionZifencei.py  isa.py  register.py  subsets.py  uarch.py
isana/template/doc/spec/: isa_spec.md
isana/template/llvm/compiler-rt/cmake/: builtin-config-ix.cmake
isana/template/llvm/compiler-rt/cmake/Modules/: CompilerRTUtils.cmake
isana/template/llvm/compiler-rt/lib/builtins/: CMakeLists.txt
isana/template/llvm/lld/ELF/: CMakeLists.txt  Target.cpp  Target.h
isana/template/llvm/lld/ELF/Arch/: Xpu.cpp
isana/template/llvm/llvm/: CMakeLists.txt
isana/template/llvm/llvm/include/: module.modulemap
isana/template/llvm/llvm/lib/Object/: ELF.cpp
isana/template/picolibc/scripts/: cross-clang-xpu.txt
okojo/: ar.py  disasm.py  elf.py
okojo/app/: disassembler.py  elfeditor.py
test/isana/model/cpux0/: test_compiler.py  test_decode.py  test_disassemble.py  test_semantic.py  test_sim_ia.py
test/isana/model/riscv/: test_compiler.py  test_decoder_opt.py  test_test.py
test/isana/model/riscvx/: test_compiler.py  test_decode.py  test_decoder_opt.py  test_disassemble.py  test_gen_spec.py  test_semantic.py  test_sim_ia.py  test_test.py
test/okojo/: test_ar.py  test_disasm.py
test/okojo/ar/: a.txt  b.txt
test/uguisu/: test_graph.py
uguisu/: graph.py
uguisu/app/draw/: callgraph.py  cfg.py  dfg.py  main.py
(+17 files in other folders)
