[tool.poetry]
name = "isanagi"
version = "0.1.0"
description = "*PU Design Tool"
authors = ["nakandev <nakandev.s@gmail.com>"]
readme = "README.md"
packages = [
    { include = "isana" },
    { include = "okojo" },
    { include = "uguisu" },
]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.4"
meson = "^1.7.0"

[tool.poetry.scripts]
isana-build = "isana.app.build.main:main"
okojo-disassembler = "okojo.app.disassembler:main"
uguisu-callgraph = "uguisu.app.draw.callgraph:main"
uguisu-cfg = "uguisu.app.draw.cfg:main"
uguisu-dfg = "uguisu.app.draw.dfg:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
